erb 8 project About Us footer

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -132,6 +132,7 @@
 </section>
 
 {% comment %} Footer {% endcomment %}
+{% comment %}
 <section class="bg-dark text-white py-5 mt-5">
     <div class="container">
         <div class="row">
@@ -177,5 +178,6 @@
         </div>
     </div>
 </section>
+{% endcomment %}
 
 {% endblock%}
