erb 8 project reset password

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -104,7 +104,7 @@
                             </a>
                             <div class="position-absolute top-0 end-0 m-3">
                                 <span class="badge bg-white text-dark shadow-sm rounded-pill px-3 py-2 fw-bold">
-                                    ${{ product.price|floatformat:2|intcomma }}
+                                    {{ product.price|floatformat:2|intcomma }}
                                 </span>
                             </div>
                         </div>
