navbar width adjust

--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,7 +1,14 @@
 {% load i18n %}
 {% load static %}
+<style>
+ 
+  @media (min-width: 1200px) {
+    .container {
+        max-width: 1240px!important;
+    }
+}
+</style>
 <!-- Navbar -->
-
     <!--<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #147040;" " sticky-top"> -->
       <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #147040;">
       <div class="container">
