--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -35,7 +35,7 @@
             <li {% if '/comments/' == request.path %} class="nav-item active mr-3" {% else %} class="nav-item  mr-3" {% endif %} hidden>
               <a class="nav-link" href={% url 'pages:index' %}>{% translate "Review" %}</a>
             </li>                       
-            {% if user.is_authenticated and user.username == 'admin' %}
+            {% if user.is_authenticated and user.is_staff == True %}
               <li {% if '/comments/' == request.path %} class="nav-item active mr-3" {% else %} class="nav-item  mr-3" {% endif %}>
                 <a class="nav-link" href={% url 'blogs:comment_list' %}>{% translate "Blog admin" %}</a>
               </li>
